fixing overflow scroll

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #225e21;
+    overflow: hidden;
 }
 
 header{
